fixed 2fa issues
